implement query params filters to list services
